changing theming after ui feedback

--- a/TM.Wedding.UI/tm-wedding-ui/src/app/about/about.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/about/about.component.css
@@ -1,5 +1,5 @@
 .parent-container {
-    background-color: #2e2b2b;
+    background-color: var(---dark-color);
     color: white;
     padding: 4rem;
     width: 100%;
