--- a/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <ngx-spinner bdColor="rgba(0, 0, 0, 1)" size="medium" color="#f5d15a" type="square-jelly-box" [fullScreen]="true"
+  <ngx-spinner bdColor="rgba(0, 0, 0, 1)" size="medium" color="var(--white-color)" type="square-jelly-box" [fullScreen]="true"
     [showSpinner]="true">
-    <h1 style="color: #f5d15a;font-family: 'Raleway', sans-serif;"> Loading... </h1>
+    <h1 style="color: var(--white-color);font-family: 'Raleway', sans-serif;"> Loading... </h1>
   </ngx-spinner>
 </div>
 
@@ -9,10 +9,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <a class="navbar-brand" href="#" style="margin-right:28px;">
-        <img src="../../assets/img/custom-nav-logo.png" style="width:80px;height:80px">
-        <!-- <button mat-fab class="gold-fab" style="font-family: 'WeddingCaligraphic';color:rgb(255, 255, 255)">
-          T&M
-        </button> -->
+        <img src="../../assets/img/custom-nav-logo-white.png" style="width:80px;height:80px">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
