--- a/TM.Wedding.UI/tm-wedding-ui/src/app/home-carousel/home-carousel.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/home-carousel/home-carousel.component.html
@@ -1,7 +1,7 @@
 <div class="carousel-container fade-in">
     <div>
         <div id="homeHeaderCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
-            <img src="../../assets/img/home.carousel.backround-vertical.4.png" class="d-block w-100" alt="...">
+            <img src="../../assets/img/home.carousel.backround-vertical.3.png" class="d-block w-100" alt="...">
         </div>
     </div>
     <div class="overlay-div">
@@ -12,29 +12,10 @@
             <div class="container overlay-div-sub-header">
                 <h2>SAVE THE DATE</h2>
                 <div class="overlay-div-day-header">
-                    <h1 class="overlay-div-sub-header-day">24aug</h1>
+                    <h1 class="overlay-div-sub-header-day">24august</h1>
                     <h1 class="overlay-div-sub-header-day"> 2024</h1>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!-- <div class="animation-container">
-    <div class="lightning-container">
-      <div class="lightning white"></div>
-      <div class="lightning red"></div>
-    </div>
-    <div class="boom-container">
-      <div class="shape circle big white"></div>
-      <div class="shape circle white"></div>
-      <div class="shape triangle big yellow"></div>
-      <div class="shape disc white"></div>
-      <div class="shape triangle blue"></div>
-    </div>
-    <div class="boom-container second">
-      <div class="shape circle big white"></div>
-      <div class="shape circle white"></div>
-      <div class="shape disc white"></div>
-      <div class="shape triangle blue"></div>
-    </div>
-  </div> -->
