--- a/TM.Wedding.UI/tm-wedding-ui/src/app/info-page/info-page.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/info-page/info-page.component.html
@@ -3,14 +3,7 @@
     <div class="overlay-div">
         <div class="overlay-div-container">
             <div class="container">
-                <h1 class="overlay-div-header">Crete Sense the authentic</h1>
-            </div>
-            <div class="container overlay-div-sub-header">
-                <h2>DISCOVER CRETE</h2>
-                <div class="overlay-div-day-header">
-                    <h1 class="overlay-div-sub-header-day">24aug</h1>
-                    <h1 class="overlay-div-sub-header-day"> 2024</h1>
-                </div>
+                <h1 class="overlay-div-header">Basic Info for our wedding</h1>
             </div>
         </div>
     </div>
@@ -135,15 +128,18 @@
                         </div>
                         <p class="card-text">{{languageConfig.properties.get('info_stay_recommendations')}}</p>
                         <ul class="card-text">
-                            <li>{{languageConfig.properties.get('info_stay_place1')}} | 900m <i class="bi bi-car-front-fill"></i></li>
-                            <li>{{languageConfig.properties.get('info_stay_place2')}} | 7.8km <i class="bi bi-car-front-fill"></i></li>
-                            <li>{{languageConfig.properties.get('info_stay_place3')}} | 5.1km <i class="bi bi-car-front-fill"></i></li>
-                            <li>{{languageConfig.properties.get('info_stay_place4')}} | 3.7km <i class="bi bi-car-front-fill"></i></li>
-                            <li>{{languageConfig.properties.get('info_stay_place5')}} | 23km <i class="bi bi-car-front-fill"></i></li>
-                            <li>{{languageConfig.properties.get('info_stay_place6')}} | 25km <i class="bi bi-car-front-fill"></i></li>
-                            <li>{{languageConfig.properties.get('info_stay_place7')}} | 24km <i class="bi bi-car-front-fill"></i></li>
+                            <li>{{languageConfig.properties.get('info_stay_place1')}} | 900 m <i class="bi bi-car-front-fill"></i></li>
+                            <li>{{languageConfig.properties.get('info_stay_place4')}} | 3.6 km <i class="bi bi-car-front-fill"></i></li>
+                            <li>{{languageConfig.properties.get('info_stay_place9')}} | 4.5 km <i class="bi bi-car-front-fill"></i></li>
+                            <li>{{languageConfig.properties.get('info_stay_place3')}} | 5 km <i class="bi bi-car-front-fill"></i></li>
+                            <li>{{languageConfig.properties.get('info_stay_place2')}} | 7.8 km <i class="bi bi-car-front-fill"></i></li>
+                            <li>{{languageConfig.properties.get('info_stay_place6')}} | 10 km <i class="bi bi-car-front-fill"></i></li>
+                            <li>{{languageConfig.properties.get('info_stay_place10')}} | 12 km <i class="bi bi-car-front-fill"></i></li>
+                            <li>{{languageConfig.properties.get('info_stay_place5')}} | 12 km <i class="bi bi-car-front-fill"></i></li>
+                            <li>{{languageConfig.properties.get('info_stay_place7')}} | 13 km <i class="bi bi-car-front-fill"></i></li>
+                            <li>{{languageConfig.properties.get('info_stay_place8')}} | 24 km <i class="bi bi-car-front-fill"></i></li>
                         </ul>
-                        <a routerLink="/about" class="btn btn-info" style="border-radius: 20px;">{{languageConfig.properties.get('info_stay_explore_more')}}</a>
+                        <!-- <a href="https://www.google.gr/maps/place/%CE%9A%CF%81%CE%AE%CF%84%CE%B7/@35.2484029,24.5824499,10z/data=!3m1!4b1!4m6!3m5!1s0x149afe2f827d98a1:0x100bd2ce2b9c630!8m2!3d35.240117!4d24.8092691!16s%2Fg%2F122zjww4?entry=ttu" target="_blank" class="btn btn-info" style="border-radius: 20px;">{{languageConfig.properties.get('info_stay_explore_more')}}</a> -->
                     </div>
                 </div>
             </div>
@@ -202,5 +198,19 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
+<div class="card-container" style="text-align:center">
+    <i class="bi bi-telephone-outbound" style="font-size:2.8rem"></i>
+    <h4>{{languageConfig.properties.get('info_stay_useful_phones')}}</h4>
+    <div style="text-align: left;margin-left:15%">
+        <h5> <a [href]="'tel: 2834340000'">{{languageConfig.properties.get('info_stay_useful_phones1')}}</a></h5>
+        <h5> <a [href]="'tel: 2834031208'">{{languageConfig.properties.get('info_stay_useful_phones2')}}</a></h5>
+        <h5> <a [href]="'tel: 2831342100'">{{languageConfig.properties.get('info_stay_useful_phones3')}}</a></h5>
+        <h5> <a [href]="'tel: 28340022349'">{{languageConfig.properties.get('info_stay_useful_phones4')}}</a></h5>
+        <h5> <a [href]="'tel: 2831088173'">{{languageConfig.properties.get('info_stay_useful_phones5')}}</a></h5>
+        <h5> <a [href]="'tel: 2834023199'">{{languageConfig.properties.get('info_stay_useful_phones6')}}</a></h5>
+        <h5> <a [href]="'tel: 2831022222'">{{languageConfig.properties.get('info_stay_useful_phones7')}}</a></h5>
     </div>
 </div>
