--- a/TM.Wedding.UI/tm-wedding-ui/src/app/wedding-counter/wedding-counter.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/wedding-counter/wedding-counter.component.html
@@ -17,6 +17,6 @@
 </div>
 <div style="margin-top:20px">
   <div class="progress">
-    <div class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar"  aria-valuemin="0" aria-valuemax="100" [style.width.%]="percentage"></div>
+    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"  aria-valuemin="0" aria-valuemax="100" [style.width.%]="percentage" style="background-color: #5d5c65;"></div>
   </div>
 </div>
