--- a/TM.Wedding.UI/tm-wedding-ui/src/app/couple-info/couple-info.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/couple-info/couple-info.component.html
@@ -1,10 +1,6 @@
-<div class="container" style="background-color: #383838;">
+<div class="container" style="background-color: var(--dark-color);">
     <div class="coupleInfo-mainHeader">
         <h3 style="font-family: var(--ff-secondary);">{{languageConfig.properties.get('home_cpl_header')}}</h3>
-        <span>{{languageConfig.properties.get('home_cpl_subheader')}}</span>
-        <p style="font-size:2rem;color:gray">
-          <i class="bi bi-rainbow"></i>
-        </p>
     </div>
     <div class="row">
         <div class="col">
@@ -12,7 +8,6 @@
                 <img src="../../assets/img/couple-info-groom.jpg" class="card-img-top" alt="..." >
                 <div class="card-body">
                   <h5 class="card-title" style="font-family:WeddingCaligraphic">Thodoris</h5>
-                  <p class="card-text">{{languageConfig.properties.get('home_cpl_groom')}}</p>
                 </div>
               </div>
         </div>
@@ -21,7 +16,6 @@
                 <img src="../../assets/img/couple-info-bride.jpg" class="card-img-top" alt="..." >
                 <div class="card-body">
                   <h5 class="card-title" style="font-family:WeddingCaligraphic">Marilena</h5>
-                  <p class="card-text">{{languageConfig.properties.get('home_cpl_pride')}}</p>
                 </div>
               </div>
         </div>
