--- a/TM.Wedding.UI/tm-wedding-ui/src/app/login/login.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/login/login.component.html
@@ -1,13 +1,13 @@
 <div class="container" [hidden]="!isLoading">
-  <ngx-spinner bdColor="rgba(0, 0, 0, 1)" size="medium" color="#f5d15a" type="square-jelly-box" [fullScreen]="true" [showSpinner]="true">
-      <h1 style="color: #f5d15a;font-family: 'Raleway', sans-serif;"> Loading... </h1>
+  <ngx-spinner bdColor="rgba(0, 0, 0, 1)" size="medium" color="var(--white-color)" type="square-jelly-box" [fullScreen]="true" [showSpinner]="true">
+      <h1 style="color: var(--white-color);font-family: 'Raleway', sans-serif;"> Loading... </h1>
   </ngx-spinner>
 </div>
 
 <div class="carousel-container fade-in">
   <div>
       <div id="homeHeaderCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
-          <img src="../../assets/img/home.carousel.backround-vertical.6.png" class="d-block w-100" alt="...">
+          <img src="../../assets/img/home.carousel.backround-vertical.6a.png" class="d-block w-100" alt="...">
       </div>
   </div>
   <div class="overlay-div">
@@ -27,7 +27,7 @@
                 </div>
         
                 <div class="form-inline" style="padding:0px;text-align: center;">
-                  <button class="btn btn-lg btn-warning" type="submit" style="margin-right:5px;width:100%;max-width:800;font-family: 'Raleway', sans-serif;" [disabled]="isLoading || !loginForm.valid">
+                  <button class="btn btn-lg btn-warning" type="submit" style="margin-right:5px;width:100%;max-width:800;font-family: 'Raleway', sans-serif;background-color: #d8caaf;" [disabled]="isLoading || !loginForm.valid">
                     <i class="bi bi-door-open" style="padding-right:8px"></i>Login</button>
                 </div>
         
@@ -51,53 +51,3 @@
   </div>
 </div>
 
-
-<!-- <div class="bg" style="min-height:600px;text-align: center;" [hidden]="isLoading">
-    <div class="center-screen fade-in" style="padding-top:25%">
-        <table style="width:100%">
-            <tr>
-                <td>
-                    <div>
-                        <h1 class="overlay-div-header">Welcome to our Wedding</h1>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="container">
-                        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" style="text-align:left">
-                            <div [ngStyle]="{'opacity':isLoading ? '0.5' : '1' }">   
-                              <div>
-                                <mat-form-field style="width:100%;margin-top:2rem">
-                                  <mat-label>Enter your password</mat-label>
-                                  <input matInput type="password" formControlName="password">
-                                </mat-form-field>
-                              </div>
-                            </div>
-                    
-                            <div class="form-inline" style="padding:0px;text-align: center;">
-                              <button class="btn btn-lg btn-warning" type="submit" style="margin-right:5px;width:100%;max-width:800" [disabled]="isLoading || !loginForm.valid">
-                                <i class="bi bi-door-open" style="padding-right:8px"></i>Login</button>
-                            </div>
-                    
-                            <div class="form-inline" style="padding:40px 0px;" [hidden]="!isLoading">
-                              <div class="spinner-border text-primary" role="status">
-                              </div>
-                              <div>
-                                <h4 style="padding-left:20px;color:rgb(23, 23, 23)">Sign in...</h4>
-                              </div>
-                            </div>
-                    
-                            <div class="form-inline errorMsg" [hidden]="errorMessage.length===0">
-                              <div class=error-container>
-                                <span style="padding-left:20px;color:rgb(224, 32, 32)"><i class="bi bi-emoji-frown" style="padding-right:4px"></i>{{errorMessage}}</span>
-                              </div>
-                            </div>
-                    
-                          </form>
-                    </div>
-                </td>
-            </tr>
-        </table>    
-    </div>
-</div> -->
