--- a/TM.Wedding.UI/tm-wedding-ui/src/app/rsvp-page/rsvp-page.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/rsvp-page/rsvp-page.component.html
@@ -1,6 +1,6 @@
 <div class="container" [hidden]="!isLoading">
-    <ngx-spinner bdColor="rgba(0, 0, 0, 1)" size="medium" color="#f5d15a" type="square-jelly-box" [fullScreen]="true" [showSpinner]="true">
-        <h1 style="color: #f5d15a;font-family: 'Raleway', sans-serif;"> Loading... </h1>
+    <ngx-spinner bdColor="rgba(0, 0, 0, 1)" size="medium" color="var(--white-color)" type="square-jelly-box" [fullScreen]="true" [showSpinner]="true">
+        <h1 style="color: var(--white-color);font-family: 'Raleway', sans-serif;"> Loading... </h1>
     </ngx-spinner>
   </div>
 <div class="bg" [hidden]="isLoading">
@@ -8,7 +8,7 @@
         <div class="overlay-div">
             <div class="overlay-div-container">
                 <div class="container">
-                    <h1 class="overlay-div-header">Say you will be there</h1>
+                    <h1 class="overlay-div-header">You are invited</h1>
                 </div>
                 <div class="container overlay-div-sub-header">
                     <h2>{{languageConfig.properties.get('rsvp_invite_header')}}</h2>
