--- a/TM.Wedding.UI/tm-wedding-ui/src/app/footer/footer.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
 <div class="container-footer">
     <p><i class="bi bi-c-circle"></i> COPYRIGHT {{currentYear}} KOMAKRID - ALL RIGHTS RESERVED</p>
-    <img src="../../assets/img/qrcode.png" style="width:120px;height:160px">
+    <img src="../../assets/img/qrcode_klemeno.png" style="width:120px;height:160px">
 </div>
