--- a/TM.Wedding.UI/tm-wedding-ui/src/app/wedding-page/wedding-page.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/wedding-page/wedding-page.component.html
@@ -82,6 +82,9 @@
                     </div>
                 </div>
             </div>
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3251.8205644218538!2d24.723175777315248!3d35.40969797267617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x149ba98e8719d979%3A0x6ddab9635e7b452e!2zzqPOus61z4DOsc-Dz4TOtyBBcmVuYQ!5e0!3m2!1sel!2sgr!4v1704648741630!5m2!1sel!2sgr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </div>
     </div>
 
