--- a/TM.Wedding.UI/tm-wedding-ui/src/app/couple-info/couple-info.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/couple-info/couple-info.component.html
@@ -1,21 +1,10 @@
 <div class="container" style="background-color: var(--dark-color);">
-    <div class="coupleInfo-mainHeader">
-        <h3 style="font-family: var(--ff-secondary);">{{languageConfig.properties.get('home_cpl_header')}}</h3>
-    </div>
     <div class="row">
         <div class="col">
             <div class="card couple-card fade-in">
-                <img src="../../assets/img/couple-info-groom.jpg" class="card-img-top" alt="..." >
+                <img src="../../assets/img/couple_home.jpg" class="card-img-top" alt="..." >
                 <div class="card-body">
-                  <h5 class="card-title" style="font-family:WeddingCaligraphic">Thodoris</h5>
-                </div>
-              </div>
-        </div>
-        <div class="col">
-            <div class="card couple-card fade-in">
-                <img src="../../assets/img/couple-info-bride.jpg" class="card-img-top" alt="..." >
-                <div class="card-body">
-                  <h5 class="card-title" style="font-family:WeddingCaligraphic">Marilena</h5>
+                  <h5 class="card-title">Thodoris & Marilena</h5>
                 </div>
               </div>
         </div>
