--- a/TM.Wedding.UI/tm-wedding-ui/src/app/home/home.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/home/home.component.html
@@ -1,5 +1,8 @@
 <app-home-carousel></app-home-carousel>
 <div class="container" style="padding:2rem 1rem;text-align:center;width:100%;">
+    <div class="couple-info-mainHeader">
+        <p style="font-size:1.2rem">{{languageConfig.properties.get('home_blurb')}}</p>
+    </div>
     <app-wedding-counter></app-wedding-counter>
 </div>
 <div class="container-coupleInfo">
