--- a/TM.Wedding.UI/tm-wedding-ui/src/app/wedding-counter/wedding-counter.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/wedding-counter/wedding-counter.component.css
@@ -4,7 +4,7 @@
     background-color: black;
     max-width: 800px;
     margin: 20px auto;
-    color: var(--white-color);
+    color: #e1d3b7;
     border-radius: 6px;
     padding: 10px;
     font-family: var(--ff-secondary);
