--- a/TM.Wedding.UI/tm-wedding-ui/src/app/app.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/app.component.html
@@ -1,3 +1,8 @@
+<div [hidden]="!userLoggedIn" style="width:100%;padding:10px 0px 0px 0px;background-color:#282828; text-align:center;font-size:2.8rem; color:#c49c73;font-style: italic;">
+  <h2 style="font-family:'Parisienne', cursive;font-size:1rem">24 August 2024</h2>
+  <h1 style="font-family:'Parisienne', cursive;font-size:2.6rem">Thodoris & Marilena</h1>
+</div>
+
 <div class="container" [hidden]="!userLoggedIn">
   <app-header></app-header>
 </div>
