--- a/TM.Wedding.UI/tm-wedding-ui/src/app/contact-page/contact-page.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/contact-page/contact-page.component.css
@@ -36,3 +36,18 @@
 .hor-center{
     text-align: center;
 }
+
+.icons{
+    padding-bottom:0px;
+    text-align: center;
+}
+
+.icons a{
+    color:black;
+    font-size:1.6rem;
+    padding:0.4rem;
+}
+
+.icons h5{
+    font-size:1.6rem;
+}
