--- a/TM.Wedding.UI/tm-wedding-ui/src/app/contact-page/contact-page.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/contact-page/contact-page.component.html
@@ -68,9 +68,39 @@
     <div class="overlay-div hor-center">
         <div class="container overlay-div-sub-header">
             <div class="container overlay-div-sub-header">
-                <i class="bi bi-telephone-outbound" style="font-size:2.8rem"></i>
+                <i class="bi bi-person-bounding-box" style="font-size:2.8rem"></i>
                 <h4>{{languageConfig.properties.get('contact_callus')}}</h4>
-                <h5> <a [href]="'tel: 6976033107'">{{languageConfig.properties.get('contact_callus1')}} (6976033107)</a><br/><a [href]="'tel: 6975123158'">{{languageConfig.properties.get('contact_callus2')}} (6975123158)</a></h5>
+            </div>
+        </div>
+    </div>
+
+    <div class="container" style="background-color: var(--dark-color);">
+        <div class="row">
+            <div class="col">
+                <div class="card fade-in" style="border:2px solid #e3bc60;">
+                    <div class="card-body icons">
+                      <h5 class="card-title" style="font-family:WeddingCaligraphic">Thodoris</h5>
+                    </div>
+                    <div class="card-body icons">
+                        <a [href]="'tel: 6976033107'"><i class="bi bi-telephone-outbound"></i></a>
+                        <a [href]="'tel: 6975123158'"><i class="bi bi-messenger"></i></a>
+                        <a [href]="'tel: 6975123158'"><i class="bi bi-instagram"></i></a>
+                        <a [href]="'tel: 6975123158'"><i class="bi bi-whatsapp"></i></a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col">
+                <div class="card fade-in" style="border:2px solid #e3bc60;">
+                    <div class="card-body icons">
+                      <h5 class="card-title" style="font-family:WeddingCaligraphic">Marilena</h5>
+                    </div>
+                    <div class="card-body icons">
+                        <a [href]="'tel: 6975123158'"><i class="bi bi-telephone-outbound"></i></a>
+                        <a [href]="'tel: 6975123158'"><i class="bi bi-messenger"></i></a>
+                        <a [href]="'tel: 6975123158'"><i class="bi bi-instagram"></i></a>
+                        <a [href]="'tel: 6975123158'"><i class="bi bi-whatsapp"></i></a>
+                    </div>
+                  </div>
             </div>
         </div>
     </div>
