--- a/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.html
@@ -6,7 +6,59 @@
 </div>
 
 <div class="d-flex">
-  <nav class="navbar navbar-expand-lg navbar-dark">
+  <nav class="navbar fixed-bottom fixed-bottom-navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#" style="margin-right:28px;display:none">
+        <img src="../../assets/img/custom-nav-logo-white.png" style="width:80px;height:80px">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" routerLink="" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">{{languageConfig.properties.get('header_home')}}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/wedding" data-bs-toggle="collapse"
+              data-bs-target=".navbar-collapse.show">{{languageConfig.properties.get('header_wedding')}}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/about" data-bs-toggle="collapse"
+              data-bs-target=".navbar-collapse.show">{{languageConfig.properties.get('header_about')}}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/info" data-bs-toggle="collapse"
+              data-bs-target=".navbar-collapse.show">{{languageConfig.properties.get('header_info')}}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/rsvp" data-bs-toggle="collapse"
+              data-bs-target=".navbar-collapse.show">{{languageConfig.properties.get('header_rsvp')}}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/gifts" data-bs-toggle="collapse"
+              data-bs-target=".navbar-collapse.show">{{languageConfig.properties.get('header_gift')}}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/contact" data-bs-toggle="collapse"
+              data-bs-target=".navbar-collapse.show">{{languageConfig.properties.get('header_contact')}}</a>
+          </li>
+          <li style="color:white">
+            <div [hidden]="languageSelectedCode==='en'"><button class="btn" style="padding:0px"
+                (click)="changeLanguage('en')"><img src="../../assets/img/english-flag.png"
+                  style="width:28px;height:28px;"></button></div>
+            <div [hidden]="languageSelectedCode==='el'"><button class="btn" style="padding:0px"
+                (click)="changeLanguage('el')"><img src="../../assets/img/greek-icon.png"
+                  style="width:28px;height:28px;"></button></div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+  <nav class="navbar fixed-top fixed-top-navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <a class="navbar-brand" href="#" style="margin-right:28px;">
         <img src="../../assets/img/custom-nav-logo-white.png" style="width:80px;height:80px">
@@ -56,18 +108,4 @@
       </div>
     </div>
   </nav>
-  <!-- <div style="width:100%;text-align: right;">
-    <div class="languageContainer">
-      <div>
-        <div [hidden]="languageSelectedCode==='en'">
-          <button class="btn" (click)="changeLanguage('en')" style="color:White;text-decoration: underline;">
-            EN
-          </button></div>
-      <div [hidden]="languageSelectedCode==='el'">
-        <button class="btn" (click)="changeLanguage('el')"  style="color:White;text-decoration: underline;">
-            EΛ
-          </button></div>
-      </div>
-    </div>
-  </div> -->
 </div>
