refactor wedding info page

--- a/TM.Wedding.UI/tm-wedding-ui/src/app/contact-page/contact-page.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/contact-page/contact-page.component.html
@@ -76,29 +76,29 @@
 
     <div class="container" style="background-color: var(--dark-color);">
         <div class="row">
-            <div class="col">
+            <div class="col col-sm-6">
                 <div class="card fade-in" style="border:2px solid #e3bc60;">
                     <div class="card-body icons">
                       <h5 class="card-title" style="font-family:WeddingCaligraphic">Thodoris</h5>
                     </div>
                     <div class="card-body icons">
                         <a [href]="'tel: 6976033107'"><i class="bi bi-telephone-outbound"></i></a>
-                        <a [href]="'tel: 6975123158'"><i class="bi bi-messenger"></i></a>
-                        <a [href]="'tel: 6975123158'"><i class="bi bi-instagram"></i></a>
-                        <a [href]="'tel: 6975123158'"><i class="bi bi-whatsapp"></i></a>
+                        <a href="https://m.me/teo.s.4"><i class="bi bi-messenger"></i></a>
+                        <a href="https://www.instagram.com/thodoris_siapakas?igsh=MzFoZ3Rua3ZnanZm"><i class="bi bi-instagram"></i></a>
+                        <a [href]="'viber://contact?number=%2B306976033107'"><i class="bi bi-whatsapp"></i></a>
                     </div>
                   </div>
             </div>
-            <div class="col">
+            <div class="col col-sm-6">
                 <div class="card fade-in" style="border:2px solid #e3bc60;">
                     <div class="card-body icons">
                       <h5 class="card-title" style="font-family:WeddingCaligraphic">Marilena</h5>
                     </div>
                     <div class="card-body icons">
                         <a [href]="'tel: 6975123158'"><i class="bi bi-telephone-outbound"></i></a>
-                        <a [href]="'tel: 6975123158'"><i class="bi bi-messenger"></i></a>
-                        <a [href]="'tel: 6975123158'"><i class="bi bi-instagram"></i></a>
-                        <a [href]="'tel: 6975123158'"><i class="bi bi-whatsapp"></i></a>
+                        <a href="https://m.me/marilena.koinakh"><i class="bi bi-messenger"></i></a>
+                        <a href="https://www.instagram.com/marilena_koinaki?igsh=MTE1Z3dtbDdxb2J1bA=="><i class="bi bi-instagram"></i></a>
+                        <a [href]="'viber://contact?number=%2B306975123158'"><i class="bi bi-whatsapp"></i></a>
                     </div>
                   </div>
             </div>
