--- a/TM.Wedding.UI/tm-wedding-ui/src/app/wedding-page/wedding-page.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/wedding-page/wedding-page.component.css
@@ -59,8 +59,8 @@
 }
 
 .card{
-    background-color: #1b1a1a;
-    color:white;
+    background-color: white;
+    color:black;
     border:0px;
     padding:1rem;
 }
@@ -175,4 +175,88 @@
     -webkit-transform: translateX(0);
     transform: translateX(0);
     opacity: 1;
+  }
+
+  .couple-card {
+    width: 100%;
+    opacity: 0.8;
+    height: 100%;
+    padding: 20px;
+    border: 2px solid goldenrod;
+  }
+  
+  .couple-card:hover {
+    opacity: 1;
+    border: 2px solid goldenrod;
+    border-radius: 20px;
+    padding: 10px;
+  }
+  
+  .couple-card:active {
+    opacity: 1;
+    border: 2px solid goldenrod;
+    border-radius: 20px;
+    padding: 10px;
+  }
+  
+  .coupleInfo-mainHeader {
+    padding-bottom: 1rem;
+  }
+
+  .card-title {
+    font-family: 'EB Garamond', serif;
+    font-size: 1.8rem;
+    font-style: italic;
+  }
+
+  .card-body p{
+    font-family: 'EB Garamond', serif;
+    font-size: 1.2rem;
+    font-style: italic;
+  }
+
+  .overlay-div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0);
+  }
+  
+  .overlay-div-container {
+    width: 100%;
+    margin-top: 45%;
+    text-align: center;
+  }
+  
+  .overlay-div-header {
+    font-family: var(--ff-secondary);
+    font-size: 4rem;
+    color: var(--white-color);
+  }
+  
+  .overlay-div-sub-header {
+    margin-top: 2rem;
+    padding-top: 1rem;
+    color: white;
+    font-family: 'EB Garamond', serif;
+  }
+  
+  .overlay-div-sub-header-day {
+    font-size: 2.4rem;
+    font-family: 'Major Mono Display', monospace;
+    color:white;
+    }
+
+  .inner {
+    position: absolute;
+  }
+  
+  .carousel-container {
+    position: relative;
+  }
+
+  .map-container{
+    padding:20px;
   }
