--- a/TM.Wedding.UI/tm-wedding-ui/src/app/wedding-page/wedding-page.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/wedding-page/wedding-page.component.html
@@ -7,120 +7,75 @@
 
 <div [hidden]="loading">
 
-    <div class="container" style="padding:2rem 1rem;text-align:center;width:100%;">
-        <app-wedding-counter></app-wedding-counter>
-    </div>
-
-    <div class="row fade-in">
-        <img src="../../assets/img/couple-photo-dark-mixed.jpg">
-    </div>
-
-    <div class="parent-container">
-
-        <div class="container header-container">
-            <div>
-                <h1>We are getting married</h1>
-                <p style="color:#fce389">We are excited to invite you to our wedding on 24th of August</p>
-                <p>It will be our honor and pleasure to be with us and celebrate together our wedding day</p>
-
-            </div>
-
-            <div class="container" style="text-align: center;padding-top:10px">
-                <div class="row">
-                    <div class="col-sm-12 col-md-6">
-                        <img src="../../assets/img/crete_dark_map.png" class="d-block w-100" style="max-width:600px"
-                            alt="...">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-    <div class="card-container">
-        <div class="container header-container" style="text-align: center;">
-            <h1>The Wedding...</h1>
-        </div>
-        <div class="container" style="width:100%">
-            <div class="row animationContainer">
-                <div class="col-md-6 col-sm-12 col-lg-6 slide-in from-left">
-                    <div class="card">
-                        <img src="../../assets/img/wedding-card.jpg" class="card-img-top" alt="...">
+    <div class="container" style="margin-bottom:40px">
+        <div class="row">
+            <div class="col">
+                <div class="card couple-card fade-in">
+                    <img src="../../assets/img/couple-wedding-photo.jpg" class="card-img-top" alt="..." >
+                    <div class="card-body" style="text-align:center">
                         <div class="card-body">
-                            <h1 class="card-title">Ceremony</h1>
-                            <div class="container-hashtags">
-                                <a class="card-hashtag" style="background-color: #c98066;"
-                                    href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8"
-                                    target="_blank">19:30-20:30</a>
-                                <a class="card-hashtag" style="background-color: #70ba8e;"
-                                    href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8"
-                                    target="_blank">Panormos Crete</a>
-                            </div>
-                            <p class="card-text">{{languageConfig.properties.get('about_places_card1_body')}}</p>
-                            <a href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8" target="_blank"
-                                class="btn btn-info" style="border-radius: 20px;">Click to see on Map</a>
+                            <h5 class="card-title">Προσκλητηρίο Γάμου</h5>
+                        </div>
+                        <p>
+                            Είμαστε έτοιμοι να ξεκινήσουμε αυτή την τρελή περιπέτεια που ονομάζεται γάμος! Ναι, αποφασίσαμε να αγνοήσουμε τον ενθουσιασμό μας για την ελευθερία και να προχωρήσουμε σε μια δέσμευση για την υπόλοιπη ζωή μας. Με χαρά, σας προσκαλούμε στο γάμο μας που θα γίνει στις 24 Αυγούστου 2024 στο εκκλησάκι του Αγίου Νικολάου, στη Σκεπαστή Αρένα και ώρα 19.30. 
+                        </p>
+                        <div class="card-body">
+                            <h5 class="card-title">Οικογένειες</h5>
+                        </div>
+                        <p>
+                            Σιαπάκας Ιωάννης <span style="font-family:'Courier New', Courier, monospace">&</span> Καλλιόπη Χατζούλη
+                        </p>
+                        <p>
+                            Κοϊνάκης Ιωάννης <span style="font-family:'Courier New', Courier, monospace">&</span> Λαμπρινή Νικηφόρου 
+                        </p>
+                        <div class="card-body">
+                            <h5 class="card-title">Κουμπάροι</h5>
+                        </div>
+                        <p>
+                            <span>Πουλιάσης Σταμάτης</span><br>
+                            <span>Δημητρίου Μαίρη</span><br>
+                            <span>Βασσάλου Ελένη </span>
+                        </p>
+                        <div style="margin-top:60px">
+                            <p style="margin-bottom:0px">
+                                Μετα το μυστήριο θα ακολουθήσει δεξίωση στον ίδιο χώρο.
+                            </p>
                         </div>
                     </div>
+                  </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="map-container">
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3251.8205644218538!2d24.723175777315248!3d35.40969797267617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x149ba98e8719d979%3A0x6ddab9635e7b452e!2zzqPOus61z4DOsc-Dz4TOtyBBcmVuYQ!5e0!3m2!1sel!2sgr!4v1704648741630!5m2!1sel!2sgr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
+
+    <div class="carousel-container fade-in">
+        <div style="padding:20px">
+            <div id="homeHeaderCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
+                <img src="../../assets/img/home.carousel.backround-vertical4.jpg" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <div class="overlay-div">
+            <div class="overlay-div-container">
+                <div class="container">
+                    <h1 style="color:rgb(9, 9, 9);font-family: 'EB Garamond', serif; font-style:italic">Προετοιμασία</h1>
+                    <h1 style="color:rgb(0, 0, 0);font-family: 'EB Garamond', serif; font-style:italic">γαμπρού <span style="font-family:'Courier New', Courier, monospace">&</span> νύφης</h1>
                 </div>
-                <div class="col-md-6 col-sm-12 col-lg-6 animated slide-in from-left">
-                    <div class="card">
-                        <img src="../../assets/img/party-img.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h1 class="card-title">Party</h1>
-                            <div class="container-hashtags">
-                                <a class="card-hashtag" style="background-color:#43b3ba;"
-                                    href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8"
-                                    target="_blank">20:30-Late</a>
-                                <a class="card-hashtag" style="background-color: #70ba8e;"
-                                    href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8"
-                                    target="_blank">Panormos Crete</a>
-                            </div>
-                            <p class="card-text">{{languageConfig.properties.get('about_places_card2_body')}}</p>
-                            <a href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8" target="_blank"
-                                class="btn btn-info" style="border-radius: 20px;">Click to see on Map</a>
-                        </div>
+                <div class="container overlay-div-sub-header">
+                    <div class="overlay-div-day-header">
+                        <h4 style="font-style:italic;color:black">Ώρα: 16.00</h4>
+                        <h4 style="font-style:italic;color:black">Τοποθεσία: Κάλυβος Μυλοποτάμου</h4>
+                    </div>
+                    <div class="row" style="text-align: center; justify-content: center;margin-top:1rem">
+                        <a class="btn" href="https://maps.app.goo.gl/jBAm1GY2APRmNy2z6" target="_blank" style="width:50%;background-color:var(--white-color)">{{languageConfig.properties.get('home_info_btn_map')}}</a>
                     </div>
                 </div>
             </div>
-            <div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3251.8205644218538!2d24.723175777315248!3d35.40969797267617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x149ba98e8719d979%3A0x6ddab9635e7b452e!2zzqPOus61z4DOsc-Dz4TOtyBBcmVuYQ!5e0!3m2!1sel!2sgr!4v1704648741630!5m2!1sel!2sgr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
         </div>
     </div>
 
-    <div class="parent-container">
-        <div class="container header-center-container">
-            <h1>About the families</h1>
-        </div>
-        <div class="details-container">
-            <p>Few words about the two families and the best man/woman</p>
-            <p class="fade-in">
-                <span class="reason-header">About groom's family</span><br>
-                <span>{{languageConfig.properties.get('about_crete_card1_body')}}</span>
-            </p>
-            <p class="fade-in">
-                <span class="reason-header">About prides family</span><br>
-                <span [ngStyle]="{'color': hideInfoDetails ? 'rgb(81, 80, 80)' : 'rgb(155, 155, 155)'}">
-                    {{languageConfig.properties.get('about_crete_card2_body')}}
-                </span>
-                <span [hidden]="hideInfoDetails"> {{languageConfig.properties.get('about_crete_card2_body_fade')}}</span>
-            </p>
-            <p [hidden]="hideInfoDetails" class="fade-in">
-                <span class="reason-header">About best man</span><br>
-                <span>{{languageConfig.properties.get('about_crete_card3_body')}}</span>
-            </p>
-            <p [hidden]="hideInfoDetails" class="fade-in">
-                <span class="reason-header">About best woman</span><br>
-                <span>{{languageConfig.properties.get('about_crete_card4_body')}}</span>
-            </p>
-            <button class="btn btn-outline-info" (click)="onShowMoreDetails()" [hidden]="!hideInfoDetails">{{languageConfig.properties.get('about_crete_btn_showmore')}} <i
-                    class="bi bi-caret-down-fill" style="padding-left:4px"></i></button>
-            <button class="btn btn-outline-info" (click)="onShowMoreDetails()" [hidden]="hideInfoDetails">{{languageConfig.properties.get('about_crete_btn_showless')}} <i
-                    class="bi bi-caret-up-fill" style="padding-left:4px"></i></button>
-        </div>
-    </div>
-
-    <div class="row fade-in">
-        <img src="../../assets/img/couple-photo.jpg">
-    </div>
 </div>
