--- a/TM.Wedding.UI/tm-wedding-ui/src/styles.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/styles.css
@@ -6,6 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Lato&family=Major+Mono+Display&family=Manrope&family=Parisienne&family=Poppins:wght@500&family=Raleway&family=Roboto:wght@100;400&family=Tilt+Prism&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Exo+2:wght@500&family=Lato&family=Major+Mono+Display&family=Manrope&family=Parisienne&family=Poppins:wght@500&family=Raleway&family=Roboto:wght@100;400&family=Tilt+Prism&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital@1&display=swap');
 
 @font-face {
     font-family: 'WeddingCaligraphic';
